# tool-ocr

./: DEVPLAN.md  README.md  deps.sh  kiso.toml  pyproject.toml  run.py
src/kiso_ocr_mcp/: __init__.py  ocr_runner.py  server.py
tests/: test_live.py  test_ocr_runner.py  test_run.py  test_server.py
